--- a/angular.json
+++ b/angular.json
@@ -16,6 +16,13 @@
           "standalone": false
         }
       },
+      "i18n": {
+        "sourceLocale": "en-US",
+        "locales": {
+          "en": "src/assets/i18n/en.json",
+          "ua": "src/assets/i18n/ua.json"
+        }
+      },
       "root": "",
       "sourceRoot": "src",
       "prefix": "app",
