--- a/angular.json
+++ b/angular.json
@@ -17,7 +17,7 @@
         }
       },
       "i18n": {
-        "sourceLocale": "ukr",
+        "sourceLocale": "en-US",
         "locales": {
           "en": "src/assets/i18n/en.json",
           "ua": "src/assets/i18n/ua.json"
